Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Rating__c.object
<CustomObject>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF( UnivStudent__r.Average__c &gt;80,1,
IF(UnivStudent__r.Average__c &lt; 80,2,
IF(UnivStudent__r.Average__c&lt;70,3,0)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>UnivStudent__r.Student_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnivStudent__c</fullName>
        <label>UnivStudent</label>
        <referenceTo>UnivStudent__c</referenceTo>
        <relationshipLabel>Ratings</relationshipLabel>
        <relationshipName>Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rating</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>